<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:fadeScrollbars="false"
              android:background="#000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="8dp"
        android:paddingLeft="@dimen/auto_space"
        android:paddingTop="@dimen/auto_space"
        android:paddingBottom="@dimen/auto_space">

        <ImageView
            android:id="@+id/az_criteria"
            android:layout_height="@dimen/nav_icon_size"
            android:layout_width="@dimen/nav_icon_size"
            android:background="@drawable/navigation_ruler_selector"
            android:contentDescription="@string/criteria">
        </ImageView>
        <ImageView
            android:id="@+id/atsk_main_image_obs"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_width="@dimen/nav_icon_size"
            android:layout_height="@dimen/nav_icon_size"
            android:background="@drawable/navigation_tree_selector"
            android:contentDescription="@string/obstructions">
        </ImageView>
        <ImageView
            android:id="@+id/atsk_main_image_grad"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_width="@dimen/nav_icon_size"
            android:layout_height="@dimen/nav_icon_size"
            android:background="@drawable/navigation_gradient_selector"
            android:contentDescription="@string/gradients">
        </ImageView>
        <ImageView
            android:id="@+id/az_vehicle"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_width="@dimen/nav_icon_size"
            android:layout_height="@dimen/nav_icon_size"
            android:background="@drawable/navigation_vehicle_selector"
            android:contentDescription="@string/vehicle_obstructions">
        </ImageView>
        <ImageView
            android:id="@+id/az_visibility"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_width="@dimen/nav_icon_size"
            android:layout_height="@dimen/nav_icon_size"
            android:background="@drawable/navigation_viz_selector"
            android:contentDescription="@string/overlay_manager">
        </ImageView>
        <ImageView
            android:id="@+id/az_gallery"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_width="@dimen/nav_icon_size"
            android:layout_height="@dimen/nav_icon_size"
            android:background="@drawable/navigation_gallery_selector"
            android:contentDescription="@string/gallery">
        </ImageView>
        <ImageView
            android:id="@+id/az_remark"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_height="@dimen/nav_icon_size"
            android:layout_width="@dimen/nav_icon_size"
            android:background="@drawable/navigation_id_badge_selector"
            android:contentDescription="@string/remarks">
        </ImageView>
        <ImageView
            android:id="@+id/az_export"
            android:layout_marginTop="@dimen/auto_space"
            android:layout_height="@dimen/nav_icon_size"
            android:layout_width="@dimen/nav_icon_size"
            android:background="@drawable/navigation_export_selector"
            android:contentDescription="@string/export">
        </ImageView>
    </LinearLayout>
</ScrollView>

